[tool.poetry]
name = "project2-gorelikov-andrey-m25-555"
version = "0.1.1"
description = "примитивная база данных"
authors = ["a.gorelikov <belstrel@gmail.com>"]
readme = "README.md"
packages = [
     { include = "src" }
     ]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"


[tool.poetry.scripts]
database = "src.primitive_db.main:main"


